--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,15 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="30sp"
-    android:paddingRight="30sp"
     android:paddingTop="50sp"
+    android:paddingRight="30sp"
     android:paddingBottom="10sp"
-    tools:context="com.pinder.app.LoginActivity">
+    tools:context="com.pinder.app.LoginFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
 
         <LinearLayout
@@ -23,58 +22,82 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/logo_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pinder"
                 android:layout_gravity="center"
                 android:paddingBottom="15dp"
-                android:textSize="48sp"/>
+                android:text="Pinder"
+                android:textSize="48sp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:orientation="vertical">
+                android:paddingRight="10sp">
 
                 <TextView
                     android:id="@+id/regulationsTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingRight="13sp"
                     android:paddingLeft="13sp"
+                    android:paddingRight="13sp"
                     android:paddingBottom="15sp"
                     android:text="By logging in you accept our Terms and Privacy Policy."
                     android:textAlignment="center"
                     android:textSize="12sp" />
 
-                <Button
-                    android:id="@+id/continue_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:layout_marginLeft="6sp"
-                    android:layout_marginRight="6sp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="20dp"
-                    android:textColor="#000000"
-                    android:background="@drawable/view_rounded_button"
-                    android:drawableStart="@drawable/ic_login_mail"
-                    android:drawableLeft="@drawable/ic_login_mail"
-                    android:text="Continue with email" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp">
+
+                    <Button
+                        android:id="@+id/continue_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:layout_marginLeft="6sp"
+                        android:layout_marginRight="6sp"
+                        android:background="@drawable/view_rounded_button"
+                        android:drawableStart="@drawable/ic_login_mail"
+                        android:drawableLeft="@drawable/ic_login_mail"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="20dp"
+                        android:text="Continue with email"
+                        android:textColor="#000000" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar_email"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginEnd="20sp"
+                        android:layout_marginRight="20sp"
+                        android:translationZ="90dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
+
 
                 <LinearLayout
                     android:id="@+id/continue_email_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:animateLayoutChanges="true"
-                    android:layout_marginTop="5sp"
                     android:layout_marginLeft="6sp"
+                    android:layout_marginTop="5sp"
                     android:layout_marginRight="6sp"
+                    android:layout_marginBottom="5sp"
+                    android:animateLayoutChanges="true"
                     android:orientation="vertical"
-                    android:visibility="gone"
-                    android:layout_marginBottom="5sp">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/emailTextView"
@@ -131,60 +154,114 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/continue_facebook"
-                    android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:text="Continue with facebook"
-                    android:textColor="#000000"
-                    android:background="@drawable/view_rounded_button"
-                    android:drawableLeft="@drawable/ic_login_facebook_white"
-                    android:drawableStart="@drawable/ic_login_facebook_white"
-                    android:layout_marginTop="10sp"
-                    android:layout_marginLeft="6sp"
-                    android:layout_marginRight="6sp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="20dp"
-                    android:layout_marginBottom="10sp"
-                    />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp">
 
-                <Button
-                    android:id="@+id/continue_google"
-                    android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:textColor="#000000"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="20dp"
-                    android:layout_marginBottom="10sp"
-                    android:layout_marginLeft="6sp"
-                    android:layout_marginRight="6sp"
-                    android:background="@drawable/view_rounded_button"
-                    android:text="Continue with Google"
-                    android:drawableLeft="@drawable/ic_logo_google_white"
-                    android:drawableStart="@drawable/ic_logo_google_white" />
+                    <Button
+                        android:id="@+id/continue_facebook"
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:layout_marginLeft="6sp"
+                        android:layout_marginRight="6sp"
+                        android:background="@drawable/view_rounded_button"
+                        android:drawableStart="@drawable/ic_login_facebook_white"
+                        android:drawableLeft="@drawable/ic_login_facebook_white"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="20dp"
+                        android:text="Continue with facebook"
+                        android:textColor="#000000" />
 
-                <Button
-                    android:id="@+id/continue_with_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="20dp"
-                    android:layout_marginBottom="5sp"
-                    android:layout_marginLeft="6sp"
-                    android:layout_marginRight="6sp"
-                    android:background="@drawable/view_rounded_button"
-                    android:text="Continue with phone"
-                    android:textColor="#000000"
-                    android:drawableLeft="@drawable/ic_login_phone"
-                    android:drawableStart="@drawable/ic_login_phone" />
+                    <ProgressBar
+                        android:id="@+id/progress_bar_facebook"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginEnd="20sp"
+                        android:layout_marginRight="20sp"
+                        android:translationZ="90dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp">
+
+                    <Button
+                        android:id="@+id/continue_google"
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:layout_marginLeft="6sp"
+                        android:layout_marginRight="6sp"
+                        android:background="@drawable/view_rounded_button"
+                        android:drawableStart="@drawable/ic_logo_google_white"
+                        android:drawableLeft="@drawable/ic_logo_google_white"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="20dp"
+                        android:text="Continue with Google"
+                        android:textColor="#000000" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar_google"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginEnd="20sp"
+                        android:layout_marginRight="20sp"
+                        android:translationZ="90dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/continue_with_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:layout_marginLeft="6sp"
+                        android:layout_marginRight="6sp"
+                        android:background="@drawable/view_rounded_button"
+                        android:drawableStart="@drawable/ic_login_phone"
+                        android:drawableLeft="@drawable/ic_login_phone"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="20dp"
+                        android:text="Continue with phone"
+                        android:textColor="#000000" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar_phone"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginEnd="20sp"
+                        android:layout_marginRight="20sp"
+                        android:translationZ="90dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/continue_with_phone_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_marginLeft="6sp"
                     android:layout_marginRight="6sp"
+                    android:orientation="vertical"
                     android:visibility="gone">
 
                     <TextView
@@ -198,9 +275,9 @@
                         android:id="@+id/phone_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="phoneNational"
                         android:hint="+00 123456789"
                         android:inputType="phone"
-                        android:autofillHints="phoneNational"
                         android:paddingTop="2sp" />
 
                     <Button
@@ -210,9 +287,10 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="2sp"
-                        android:background="@drawable/view_rounded_button"
                         android:layout_marginBottom="5sp"
+                        android:background="@drawable/view_rounded_button"
                         android:text="Send" />
+
                     <LinearLayout
                         android:id="@+id/phone_verification_layout"
                         android:layout_width="match_parent"
@@ -235,10 +313,10 @@
                                 android:id="@+id/phone_verification_edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="phoneNational"
                                 android:hint="000000"
                                 android:inputType="phone"
                                 android:maxLength="10"
-                                android:autofillHints="phoneNational"
                                 android:paddingTop="2sp" />
 
                             <ProgressBar
@@ -249,6 +327,7 @@
                                 android:layout_alignParentRight="true"
                                 android:visibility="visible" />
                         </RelativeLayout>
+
                         <Button
                             android:id="@+id/phone_verification_button"
                             android:layout_width="match_parent"
@@ -256,12 +335,13 @@
                             android:layout_gravity="center"
                             android:layout_marginLeft="2sp"
                             android:layout_marginRight="2sp"
-                            android:background="@drawable/view_rounded_button"
                             android:layout_marginBottom="5sp"
+                            android:background="@drawable/view_rounded_button"
                             android:text="Verify" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
