--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,8 +53,7 @@
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp">
+                    android:layout_height="wrap_content">
 
                     <Button
                         android:id="@+id/continue_email"
@@ -156,7 +155,8 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp">
+                    android:layout_marginBottom="10sp"
+                    android:layout_marginTop="10sp">
 
                     <Button
                         android:id="@+id/continue_facebook"
@@ -259,6 +259,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6sp"
+                    android:paddingTop="5sp"
                     android:layout_marginRight="6sp"
                     android:orientation="vertical"
                     android:visibility="gone">
