--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -5,11 +5,10 @@
 
     <LinearLayout
         android:id="@+id/container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="2sp"
         android:radius="25sp">
 
@@ -17,6 +16,7 @@
             android:id="@+id/chatImage"
             android:layout_width="50sp"
             android:layout_height="50sp"
+            android:padding="5sp"
             android:src="@drawable/ic_profile_hq" />
 
         <TextView
